kubernetes/apps/security/secrets/vault/operator/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vault-secrets-operator
spec:
  description: "Network policy for Vault Secrets Operator"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault-secrets-operator
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
    # Allow webhook from kube-apiserver
    - fromEntities:
        - kube-apiserver
  egress:
    # Allow access to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
